--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Created because I felt Chedski/rbxaudiodl was insufficient",
   "main": "index.js",
+  "bin": "index.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ATPStorages/GetDataRBLX.git"
@@ -24,5 +25,17 @@
     "inquirer": "^8.2.1",
     "inquirer-fuzzy-path": "^2.3.0",
     "jsdom": "^19.0.0"
+  },
+  "pkg": {
+    "scripts": [],
+    "assets": [
+      "node_modules/**/*"
+    ],
+    "targets": [
+      "latest-win-x64",
+      "latest-macos-x64",
+      "latest-linux-x64"
+    ],
+    "outputPath": "dist"
   }
 }
