Added the ability for user to enter cookie for user queries (Of course, optional)

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Created because I felt Chedski/rbxaudiodl was insufficient",
   "main": "index.js",
-  "bin": "index.js",
+  "bin": "index.m.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ATPStorages/GetDataRBLX.git"
